<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/title_login"
    android:background="@drawable/login_pic"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".Login">

    <EditText
        android:id="@+id/editText_user"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:baselineAligned="false"
        android:ems="10"
        android:hint="@string/username_text"
        android:inputType="text"
        android:selectAllOnFocus="false"
        android:singleLine="true" />

    <EditText
        android:id="@+id/editText_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_user"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:hint="@string/password_text"
        android:inputType="textPassword"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <Button
        android:id="@+id/button_login"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp"
        android:text="@string/button_login_text"
        android:textIsSelectable="false" />

    <TextView
        android:id="@+id/textView_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_below="@+id/button_login"
        android:layout_marginTop="5dp"
        android:text="@string/or_text"
        android:textColor="@android:color/holo_orange_light"
        android:textStyle="bold" />

    <com.google.android.gms.common.SignInButton
        android:id="@+id/button_sign_in"
        android:layout_width="208dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView_or"
        android:layout_marginTop="5dp" />

    <View
        android:id="@+id/left_divider"
        android:layout_width="90dp"
        android:layout_height="1dp"
        android:layout_toLeftOf="@id/textView_or"
        android:layout_alignTop="@id/textView_or"
        android:layout_marginTop="13dp"
        android:layout_marginRight="13dp"
        android:background="@android:color/black" />

    <View
        android:id="@+id/right_divider"
        android:layout_width="90dp"
        android:layout_height="1dp"
        android:layout_toRightOf="@id/textView_or"
        android:layout_alignTop="@id/textView_or"
        android:layout_marginTop="13dp"
        android:layout_marginLeft="13dp"
        android:background="@android:color/black" />

</RelativeLayout>