<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@android:color/white"
    tools:context=".Health">

    <ImageView
        android:id="@+id/left_background"
        android:layout_width="241dp"
        android:layout_height="105dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/left_corner_nanoball" />

    <ImageView
        android:id="@+id/right_background"
        android:layout_width="290dp"
        android:layout_height="85dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:scaleType="centerCrop"
        android:src="@mipmap/right_corner_nanoball" />

    <TextView
        android:id="@+id/txtInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:text="@string/button_health_text"
        android:fontFamily="@font/roboto_bold"
        android:textColor="@color/cardview_dark_background"
        android:textSize="36sp"
        android:textStyle="bold"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="602dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_below="@id/txtInfo"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null">

            <TextView
                android:id="@+id/first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:padding="10dp"
                android:fontFamily="@font/roboto_regular"
                android:textSize="18sp"
                android:textColor="@color/cardview_dark_background"
                android:layout_marginTop="20dp"
                android:text="According to your whole genome test results, and other personal information you provide, we customized a personal health guidance for you."/>

            <TextView
                android:id="@+id/pe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:textColor="@color/colorBGI"
                android:layout_marginTop="20dp"
                android:text="@string/pe_text"/>

            <TextView
                android:id="@+id/diet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/pe"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:textColor="@color/colorBGI"
                android:layout_marginTop="20dp"
                android:text="@string/diet_text"/>

            <TextView
                android:id="@+id/fitness"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/diet"
                android:layout_centerInParent="true"
                android:padding="10dp"
                android:fontFamily="@font/roboto_bold"
                android:textSize="20sp"
                android:textColor="@color/colorBGI"
                android:layout_marginTop="20dp"
                android:text="@string/fitness_text"/>


        </RelativeLayout>

    </ScrollView>

</RelativeLayout>